// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Experience renders correctly with a single item and no tags 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: var(--color-headline);
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  margin: 4rem 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--color-highlight);
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c6 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 0;
}

.c7 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  padding: 2rem 0;
  border-top: 1px solid var(--color-main);
}

.c7:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c8 {
  font-size: 0.75rem;
  margin: 0 0 0.25rem;
}

.c9 {
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.125rem;
}

.c10 {
  margin: 0 0 0.625rem;
}

.c11 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0 0 1rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c7 {
    grid-template-columns: 200px 1fr;
    gap: 2rem;
  }
}

<div>
  <section
    class="c0"
    id="experience"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Experience
      </p>
      <h2
        class="c4 c5"
      >
        Where I've worked
      </h2>
      <ol
        class="c6"
      >
        <li
          class="c7"
        >
          <div
            class=""
          >
            <p
              class="c2 c8"
            >
              May 2022 — Present
            </p>
            <p
              class="c2 c9"
            >
              JIBE eCommerce
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c10"
            >
              Senior Frontend Developer
            </h3>
            <p
              class="c2 c11"
            >
              Leading frontend development for headless Shopify storefronts.
            </p>
          </div>
        </li>
      </ol>
    </section>
  </section>
</div>
`;

exports[`Experience renders correctly with all items 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c13 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: var(--color-headline);
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c14 {
  border: 1px solid var(--color-highlight);
  background: var(--color-badge-bg);
  color: var(--color-paragraph);
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c0 {
  margin: 4rem 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--color-highlight);
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c6 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 0;
}

.c7 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  padding: 2rem 0;
  border-top: 1px solid var(--color-main);
}

.c7:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c8 {
  font-size: 0.75rem;
  margin: 0 0 0.25rem;
}

.c9 {
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.125rem;
}

.c10 {
  font-size: 0.75rem;
  color: var(--color-secondary);
  margin: 0;
}

.c11 {
  margin: 0 0 0.625rem;
}

.c12 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0 0 1rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c7 {
    grid-template-columns: 200px 1fr;
    gap: 2rem;
  }
}

<div>
  <section
    class="c0"
    id="experience"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Experience
      </p>
      <h2
        class="c4 c5"
      >
        Where I've worked
      </h2>
      <ol
        class="c6"
      >
        <li
          class="c7"
        >
          <div
            class=""
          >
            <p
              class="c2 c8"
            >
              May 2022 — Present
            </p>
            <p
              class="c2 c9"
            >
              JIBE eCommerce
            </p>
            <p
              class="c2 c10"
            >
              Remote · Vancouver, CA
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c11"
            >
              Senior Frontend Developer
            </h3>
            <p
              class="c2 c12"
            >
              Building and maintaining headless Shopify storefronts on Next.js/TypeScript for brands including 7mesh, Nest Designs and Saul Good. Core contributor and maintainer of Compass, the agency's internal design system powering all client storefronts. Tech lead on selected projects and epics — technical direction, code reviews, and mentoring.
            </p>
            <div
              class="c13"
            >
              <span
                class="c14"
              >
                Next.js
              </span>
              <span
                class="c14"
              >
                TypeScript
              </span>
              <span
                class="c14"
              >
                Shopify
              </span>
              <span
                class="c14"
              >
                Storybook
              </span>
              <span
                class="c14"
              >
                styled-components
              </span>
            </div>
          </div>
        </li>
        <li
          class="c7"
        >
          <div
            class=""
          >
            <p
              class="c2 c8"
            >
              Mar 2020 — Apr 2022
            </p>
            <p
              class="c2 c9"
            >
              Overstappen.nl
            </p>
            <p
              class="c2 c10"
            >
              Hybrid · Amsterdam, NL
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c11"
            >
              Senior Frontend Developer → Architect
            </h3>
            <p
              class="c2 c12"
            >
              Frontend developer on the Netherlands' main price comparison platform — built the energy comparison product, led the health insurance tool, and architected Kizi.nl, a new consumer brand, alongside the CTO. Promoted to define tech stacks, coding standards, and CI/CD pipelines across the development team.
            </p>
            <div
              class="c13"
            >
              <span
                class="c14"
              >
                Next.js
              </span>
              <span
                class="c14"
              >
                TypeScript
              </span>
              <span
                class="c14"
              >
                Redux
              </span>
              <span
                class="c14"
              >
                Storybook
              </span>
              <span
                class="c14"
              >
                Jest
              </span>
              <span
                class="c14"
              >
                Azure DevOps
              </span>
            </div>
          </div>
        </li>
        <li
          class="c7"
        >
          <div
            class=""
          >
            <p
              class="c2 c8"
            >
              Jan 2019 — Feb 2020
            </p>
            <p
              class="c2 c9"
            >
              TWC / The Widget Company
            </p>
            <p
              class="c2 c10"
            >
              On-site · Amsterdam, NL
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c11"
            >
              Frontend Developer
            </h3>
            <p
              class="c2 c12"
            >
              Built Smart TV streaming applications for media companies — most notably Videoland, RTL Nederland's VOD service — deployed across Samsung, LG, Philips, Sony, Panasonic and PlayStation platforms.
            </p>
            <div
              class="c13"
            >
              <span
                class="c14"
              >
                Vue.js
              </span>
              <span
                class="c14"
              >
                TypeScript
              </span>
              <span
                class="c14"
              >
                Vuex
              </span>
              <span
                class="c14"
              >
                Jest
              </span>
              <span
                class="c14"
              >
                Webpack
              </span>
            </div>
          </div>
        </li>
        <li
          class="c7"
        >
          <div
            class=""
          >
            <p
              class="c2 c8"
            >
              Mar 2015 — Dec 2018
            </p>
            <p
              class="c2 c9"
            >
              Consoft Sistemi (now ALTEN Italia)
            </p>
            <p
              class="c2 c10"
            >
              On-site · Turin, IT
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c11"
            >
              Frontend Developer
            </h3>
            <p
              class="c2 c12"
            >
              Built and maintained FCA Group's Build & Price vehicle configurators for NAFTA and EMEA brand sites — Jeep, Ram, Dodge, Fiat, Alfa Romeo — and led frontend development of the Mopar accessories configurator. Nearly three years of ownership on high-traffic consumer tools.
            </p>
            <div
              class="c13"
            >
              <span
                class="c14"
              >
                React
              </span>
              <span
                class="c14"
              >
                Redux
              </span>
              <span
                class="c14"
              >
                JavaScript
              </span>
              <span
                class="c14"
              >
                Webpack
              </span>
              <span
                class="c14"
              >
                Node.js
              </span>
            </div>
          </div>
        </li>
      </ol>
    </section>
  </section>
</div>
`;
